[package]
name = "stream_deck_sdk"
version = "1.0.5"
edition = "2021"
description = "Rust unofficial SDK for the Elgato Stream Deck"
repository = "https://github.com/fcannizzaro/stream-deck-rust-sdk"
homepage = "https://github.com/fcannizzaro/stream-deck-rust-sdk"
documentation = "https://github.com/fcannizzaro/stream-deck-rust-sdk"
readme = "README.md"
license = "MIT"
keywords = ["streamdeck", "streamdeck-sdk", "streamdeck-plugin"]
categories = ["hardware-support", "api-bindings"]

[dependencies]
url = "2"
tungstenite = "0.18.0"
tokio-tungstenite = "0.18.0"
futures-channel = "0.3"
futures-util = "0.3"
futures = "0.3"
async-trait = "0.1.57"
serde_json = "1.0.85"
serde_repr = "0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
hyper = { version = "0.14", features = ["full"], optional = true }
hyper-tls = { version = "0.5.0", optional = true }
base64 = { version = "0.21.0", optional = true }

[features]
images = ["base64"]
download = ["hyper", "hyper-tls"]
logging = []
default = []

